--- a/project.json
+++ b/project.json
@@ -9,15 +9,5 @@
 
     "modules" : ["cocos2d", "cocostudio"],
 
-    "jsList" : [
-        "src/resource.js?v=3",
-        "src/config.js",
-        "src/util/SlideUtil.js",
-        "src/logic/coh.View.js?v=4",
-        "src/logic/coh.Actor.js?v=2",
-        "src/logic/coh.Battle.js?v=7",
-        "src/ui/coh.MapScene.js",
-        "src/ui/coh.MapLayer.js?v=2",
-        "src/ui/coh.BattleScene.js?v=2"
-    ]
+    "jsList" : ["asset/coh.js?v=999"]
 }
